# mxl-crates

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  cog.toml  deny.toml  icons.toml  justfile  shell.nix
.devcontainer/: devcontainer.json
.github/workflows/: check.yml  release-plz.yml
.github/workflows/mxl-setup/: action.yml
docker/: Dockerfile
mxl-base/: CHANGELOG.md  Cargo.toml  README.md  build.rs
mxl-base/i18n/en/: mxl_base.ftl
mxl-base/src/: about.rs  lib.rs  localization.rs  logging.rs  misc.rs
mxl-investigator/: CHANGELOG.md  Cargo.toml  README.md  build.rs
mxl-investigator/i18n/en/: mxl_investigator.ftl
mxl-investigator/src/: lib.rs  localization.rs  misc.rs  proc_dir.rs
mxl-investigator/src/create_report_dialog/: messages.rs  model.rs  widget.rs
mxl-investigator/src/problem_report_dialog/: messages.rs  model.rs  widget.rs
mxl-player-components/: CHANGELOG.md  Cargo.toml  build.rs
mxl-player-components/i18n/en/: mxl_player_components.ftl
mxl-player-components/src/: actions.rs  glib_helpers.rs  gst_helpers.rs  lib.rs  localization.rs  misc.rs  player.rs  uri_helpers.rs
mxl-player-components/src/ui/codec_ranking/: model.rs
mxl-player-components/src/ui/message_dialog/: widget.rs
mxl-player-components/src/ui/player/: model.rs  widget.rs
mxl-player-components/src/ui/playlist/: factory.rs  messages.rs  model.rs  widget.rs
mxl-player-components/src/ui/video_offsets_dialog/: model.rs  widget.rs
mxl-player-components/tests/: playback_test.rs  seek_test.rs
mxl-player-components/tests/player/: app.rs  init.rs  mod.rs
mxl-relm4-components/: CHANGELOG.md  Cargo.toml  README.md  build.rs
mxl-relm4-components/src/: lib.rs  localization.rs
mxl-relm4-components/src/third_party_licenses_dialog/: factory_licenses.rs  factory_packages.rs  helper.rs  mod.rs  widget.rs
