[workspace]
resolver = "2"
members = [
    "mxl-base",
    "mxl-investigator",
    "mxl-relm4-components",
    "mxl-player-components",
]

[workspace.package]
edition = "2024"
rust-version = "1.89"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/x-software-com/mxl-crates"
repository = "https://github.com/x-software-com/mxl-crates"
description = "This is a component of the X-Software MXL product line."

[workspace.dependencies]
anyhow = "1.0.100"
log = "0.4.28"
const_format = "0.2.35"
chrono = "0.4.42"
tempfile = "3.23.0"
relm4-icons = "0.10.0"
relm4-icons-build = "0.10.0"
# Internationalization:
i18n-embed-fl = { version = "0.10.0" }
rust-embed = { version = "8.9.0", features = ["debug-embed"] }
i18n-embed = { version = "0.16.0", features = [
    "fluent-system",
    "desktop-requester",
] }

mxl-relm4-components = { path = "mxl-relm4-components", version = "0.2.10" }
