[workspace]
resolver = "2"
members = [
    "mxl-base",
    "mxl-investigator",
    "mxl-relm4-components",
    "mxl-player-components",
]

[workspace.package]
edition = "2024"
rust-version = "1.89"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/x-software-com/mxl-crates"
repository = "https://github.com/x-software-com/mxl-crates"
description = "This is a component of the X-Software MXL product line."

[workspace.dependencies]
anyhow = { version = "1.0.100", default-features = false }
log = { version = "0.4.28", default-features = false }
const_format = { version = "0.2.35", default-features = false }
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
tempfile = { version = "3.23.0", default-features = false }
relm4-icons = { version = "0.10.0", default-features = false }
relm4-icons-build = { version = "0.10.0", default-features = false }
rust-embed = { version = "8.9.0", default-features = false, features = [
    "debug-embed",
] }
i18n-embed-fl = { version = "0.10.0", default-features = false }
# Internationalization:
i18n-embed = { version = "0.16.0", default-features = true, features = [
    "rust-embed",
    "fluent-system",
    "desktop-requester",
] }

mxl-relm4-components = { path = "mxl-relm4-components", version = "0.2.11" }
