[package]
name = "mxl-base"
version = "0.2.8"
description = "This is a component of the X-Software MXL product line"
readme = "README.md"
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
log.workspace = true
const_format.workspace = true
chrono.workspace = true
fern = "0.7"
directories = "6"

# Internationalization:
i18n-embed-fl.workspace = true
rust-embed.workspace = true
i18n-embed.workspace = true
