[package]
name = "mxl-base"
version = "0.3.2"
description = "This is a component of the X-Software MXL product line"
readme = "README.md"
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
log.workspace = true
fern = "0.7.1"
directories = "6.0.0"

# Internationalization:
i18n-embed-fl.workspace = true
rust-embed.workspace = true
i18n-embed.workspace = true
