[package]
name = "mxl-base"
version = "0.4.0"
description = "This is a component of the X-Software MXL product line"
readme = "README.md"
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
log.workspace = true
fern = { version = "0.7.1", default-features = false }
directories = { version = "6.0.0", default-features = false }

# Internationalization:
i18n-embed-fl.workspace = true
rust-embed.workspace = true
i18n-embed.workspace = true
