[package]
name = "mxl-investigator"
version = "0.2.0"
description = "This is a component of the X-Software MXL product line."
readme = "README.md"
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
log.workspace = true
mxl-relm4-components = { workspace = true, optional = true }
chrono.workspace = true
tempfile = { workspace = true, optional = true }
relm4-icons = { workspace = true, optional = true }
fs4 = "0.13"
zip = "4"
walkdir = "2"
trash = "5"
urlencoding = { version = "2", default-features = false, optional = true }
humantime = "2"
sysinfo = { version = "0.36", optional = true }
open = { version = "5", optional = true }

# Internationalization:
i18n-embed-fl.workspace = true
rust-embed.workspace = true
i18n-embed.workspace = true

[features]
default = ["sysinfo"]
with_test = ["dep:tempfile"]
create_report_dialog = [
    "dep:mxl-relm4-components",
    "relm4-icons/all",
    "dep:urlencoding",
    "dep:open",
]
problem_report_dialog = [
    "dep:mxl-relm4-components",
    "relm4-icons/all",
    "dep:urlencoding",
]
sysinfo = ["dep:sysinfo"]
