[package]
name = "mxl-player-components"
version = "0.1.4"
description = "This is a component of the X-Software MXL product line"
readme = "README.md"
exclude = ["tests"]
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
log.workspace = true
const_format.workspace = true
mxl-relm4-components.workspace = true
chrono.workspace = true
relm4-icons = { workspace = true, features = ["all"] }
# threadpool = "1"
rusty_pool = "0.7"
termtree = "0.5"
notify = "8"
notify-debouncer-mini = "0.4"
gst = { package = "gstreamer", version = "0.23", features = ["v1_24"] }
gst-pbutils = { package = "gstreamer-pbutils", version = "0.23", features = [
    "v1_24",
] }
gst-play = { package = "gstreamer-play", version = "0.23", features = [
    "v1_24",
] }
gst-video = { package = "gstreamer-video", version = "0.23", features = [
    "v1_24",
] }
gst-tag = { package = "gstreamer-tag", version = "0.23", features = ["v1_24"] }

# Force crate to version 0.13.1, becuse 0.13.3 is broken, when executing: cargo check --no-default-features --features dmabuf
gst-plugin-gtk4 = { version = "=0.13.6", features = ["gtk_v4_14"] }


# Internationalization:
i18n-embed-fl.workspace = true
rust-embed.workspace = true
i18n-embed.workspace = true

[features]
x11egl = ["gst-plugin-gtk4/x11egl"]
x11glx = ["gst-plugin-gtk4/x11glx"]
wayland = ["gst-plugin-gtk4/wayland"]
dmabuf = ["gst-plugin-gtk4/dmabuf"]

[dev-dependencies]
tempfile.workspace = true
env_logger = "0.11"
