[package]
name = "mxl-player-components"
version = "0.1.16"
description = "This is a component of the X-Software MXL product line"
readme = "README.md"
exclude = ["tests"]
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
log.workspace = true
const_format.workspace = true
mxl-relm4-components = { workspace = true, features = ["libadwaita"] }
chrono.workspace = true
relm4-icons.workspace = true
# threadpool = "1"
rusty_pool = { version = "0.7.0", default-features = false }
termtree = { version = "0.5.1", default-features = false }
notify = { version = "8.2.0", default-features = false }
notify-debouncer-full = { version = "0.6.0", default-features = false }
gst = { package = "gstreamer", version = "0.24.4", default-features = false, features = [
    "v1_24",
] }
gst-pbutils = { package = "gstreamer-pbutils", version = "0.24.4", default-features = false, features = [
    "v1_24",
] }
gst-play = { package = "gstreamer-play", version = "0.24.4", default-features = false, features = [
    "v1_24",
] }
gst-video = { package = "gstreamer-video", version = "0.24.4", default-features = false, features = [
    "v1_24",
] }
gst-tag = { package = "gstreamer-tag", version = "0.24.4", default-features = false, features = [
    "v1_24",
] }

# Note: version 0.13.1 was good, version 0.13.3 is broken, when executing: cargo check --no-default-features --features dmabuf
gst-plugin-gtk4 = { version = "0.14.4", default-features = false, features = [
    "gtk_v4_14",
] }


# Internationalization:
i18n-embed-fl.workspace = true
rust-embed.workspace = true
i18n-embed.workspace = true

[features]
x11egl = ["gst-plugin-gtk4/x11egl"]
x11glx = ["gst-plugin-gtk4/x11glx"]
wayland = ["gst-plugin-gtk4/wayland"]
dmabuf = ["gst-plugin-gtk4/dmabuf"]

[dev-dependencies]
tempfile.workspace = true
env_logger = { version = "0.11.8", default-features = false }

[build-dependencies]
relm4-icons-build.workspace = true

[package.metadata.cargo-machete]
ignored = ["relm4-icons-build", "gst-plugin-gtk4"]
