[package]
name = "mxl-relm4-components"
version = "0.2.4"
description = "This is a component of the X-Software MXL product line"
readme = "README.md"
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
log.workspace = true
relm4-icons = { workspace = true, optional = true }
relm4 = { version = "0.9", features = ["macros", "libadwaita", "gnome_44"] }
relm4-components = "0.9"
sancus = { version = "0.1", optional = true }

# Internationalization:
i18n-embed-fl.workspace = true
rust-embed.workspace = true
i18n-embed.workspace = true

[features]
third_party_licenses_dialog = ["dep:sancus", "relm4-icons/all"]
